--- a/client/src/styles/style.less
+++ b/client/src/styles/style.less
@@ -125,11 +125,12 @@ h3 {
     margin-right: 15px;
     margin-top: 4px;
     display: flex;
+    font-weight: bold;
   }
   span {
     display: inline-block;
-    width: 40px;
-    height: 20px;
+    width: 32px;
+    height: 16px;
     margin-right: 5px;
   }
   .shapeable .color {
@@ -156,4 +157,8 @@ h3 {
   display: inline-block;
   margin-left: 15px;
   color: @oc-gray-4;
+}
+
+.row {
+  padding-bottom: 30px;
 }
